# S2shenDPI

./: .gitignore  LICENSE  README.md  change-icon.js  index.html  package-lock.json  package.json  tauri_schema.json  vite.config.js
.github/workflows/: build.yml
darknes-divert/: dns.go  engine.go  go.mod  main.go  windivert.go
s2shen-divert/: dns.go  dns_linux.go  engine.go  engine_linux.go  fake_hello.go  fake_hello_linux.go  go.mod  main.go  main_linux.go  nfqueue_linux.go  rawsock_linux.go  sni_filter.go  tls_sni.go  windivert.go
scripts/: build-linux.sh  build-proxy.cjs  build-proxy.js  build-proxy.ps1  copy-proxy.cjs  copy-proxy.js  copy-proxy.ps1  patch-spoofdpi.sh  s2shendpi-setup.sh
src/: App.css  App.jsx  Settings.jsx  constants.js  i18n.js  profiles.js
src-tauri/: Cargo.toml  hooks.nsi  installer.nsi  tauri.conf.json
src-tauri/capabilities/: default.json  desktop.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
