[package]
name = "DarknesDPI"
version = "4.0.0"
description = "Dpi Bypass Tool."
authors = ["Shencim"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "darknes_tauri_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-process = "2"
tauri-plugin-clipboard-manager = "2.3.2"

local-ip-address = "0.6.10"
tauri-plugin-notification = "2"
tauri-plugin-dialog = "2"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-autostart = "2"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["wininet", "synchapi", "errhandlingapi", "winerror", "processthreadsapi", "securitybaseapi", "handleapi", "winnt", "winuser", "libloaderapi"] }
winreg = "0.52"

# ✅ Release optimizasyonları ekle
[profile.release]
opt-level = "z"      # Size optimize (s yerine z)
lto = true           # Link-time optimization
codegen-units = 1    # Tek thread compile (daha küçük binary)
strip = true         # Debug sembolleri kaldır
panic = "unwind"     # P0-FIX: Crash anında Cleanup (Drop trait) çalışabilmesi için unwind aktif edildi
